tests/ui/no_to_string.stderr
error[E0277]: `()` doesn't implement `std::fmt::Display`
 --> $DIR/no_to_string.rs:5:40
  |
5 |     #[structopt(short, default_value = ())]
  |                                        ^^ `()` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `()`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: required because of the requirements on the impl of `std::string::ToString` for `()`
  = note: required by `std::string::ToString::to_string`
